--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
           <version>4.2.5.Final</version>
       </dependency>
       <dependency>
+          <groupId>org.hibernate</groupId>
+          <artifactId>hibernate-search</artifactId>
+          <version>4.4.0.Final</version>
+      </dependency>
+      <dependency>
           <groupId>junit</groupId>
           <artifactId>junit</artifactId>
           <version>4.11</version>
