--- a/pom.xml
+++ b/pom.xml
@@ -99,5 +99,16 @@
           <artifactId>opencsv</artifactId>
           <version>2.0</version>
       </dependency>
+
+      <dependency>
+          <groupId>org.apache.httpcomponents</groupId>
+          <artifactId>fluent-hc</artifactId>
+          <version>4.3.3</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.httpcomponents</groupId>
+          <artifactId>httpmime</artifactId>
+          <version>4.3.3</version>
+      </dependency>
   </dependencies>
 </project>
