--- a/external-resources/varodb.properties
+++ b/external-resources/varodb.properties
@@ -1,1 +1,4 @@
 id=123456abcdefg
+register_url=http://localhost:8000/registry/online/
+update_url=http://localhost:8000/manage/update/
+date_format=dd/MM/yy
