--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>md.varoinform</groupId>
-  <artifactId>varodb</artifactId>
+  <artifactId>VMDB</artifactId>
   <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
@@ -78,7 +78,7 @@
     </build>
     <packaging>jar</packaging>
 
-  <name>varodb</name>
+  <name>VMDB</name>
   <url>http://varoinform.md</url>
 
   <properties>
