--- a/pom.xml
+++ b/pom.xml
@@ -140,5 +140,11 @@
           <artifactId>httpmime</artifactId>
           <version>4.3.3</version>
       </dependency>
+      <dependency>
+          <groupId>org.apache.velocity</groupId>
+          <artifactId>velocity</artifactId>
+          <version>1.7</version>
+      </dependency>
+
   </dependencies>
 </project>
