changed vmdb.server url

--- a/external-resources/vmdb.properties
+++ b/external-resources/vmdb.properties
@@ -1,6 +1,6 @@
 id=123456abcdefg
-register_url=http://localhost:8000/registry/online/
-update_url=http://localhost:8000/manage/update/
+register_url=http://vmdb.varo-inform.com/registry/online/
+update_url=http://vmdb.varo-inform.com/manage/update/
 date_format=dd/MM/yy
 default_columns=title;town;StreetHouseOffice;phones;faxes;emails;urls
 main_icon=/external-resources/icons/VMDB.png
