--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,11 @@
           <artifactId>velocity</artifactId>
           <version>1.7</version>
       </dependency>
+      <dependency>
+          <groupId>md.varoinform</groupId>
+          <artifactId>cypher</artifactId>
+          <version>1.0</version>
+      </dependency>
 
   </dependencies>
 </project>
