--- a/external-resources/vmdb.properties
+++ b/external-resources/vmdb.properties
@@ -1,6 +1,5 @@
-#id=123456abcdefg
 register_url=http://vmdb.varo-inform.com/registry/online/
-#update_url=http://vmdb.varo-inform.com/manage/update/
+update_url=http://vmdb.varo-inform.com/manage/update/
 date_format=dd/MM/yy
 default_columns=title;town;street;phones;faxes;emails;urls
 version=1.1
